--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.15.3",
+    "mongodb": "^2.2.30",
     "socket.io": "^2.0.3"
   }
 }
